testsuite/tests/indexed-types/should_fail/T12041.stderr

T12041.hs:12:3: error:
    • Type indexes must match class instance head
      Expected: Ob @i (I @{i} @{i})
        Actual: Ob @* (I @{*} @{*}) -- Defined at T12041.hs:12:8
    • In the type instance declaration for ‘Ob’
      In the instance declaration for ‘Category I’
